# es8-bulk-editor

./: .gitignore  README.md  es8_editor.db  global_defaults.json  params.json  pyproject.toml  sample.py  test_output.bel
bulk_editor/: __main__.py  actions.py  assign.py  context.py  data_models.py  database.py  database_old.py  defaults.py  errors.py  loggers.py  main.py  mappings.py  screens.py  test_data_models.py
bulk_editor/templates/: global_defaults.json
bulk_editor/test_data/: test_1.bel
