[tool.poetry]
name = "bulk-editor"
version = "0.1.0"
description = ""
authors = ["Alex Myers <qckpckt@gmail.com>"]
readme = "README.md"
packages = [{include = "bulk_editor"}]

[tool.poetry.scripts]
es8 = "bulk_editor.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
asciimatics = "^1.14.0"
tinydb = "^4.7.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
